# fdga

./: .gitignore  README.md  extensions.txt  index.html  main.py  main_routes_patch.py  output1.md  output2.md  output3.md  output4.md  pyproject.toml  requirements.txt  telegram_setup.md
.claude/skills/api-patterns/: SKILL.md
.claude/skills/dashboard-layout/: SKILL.md
.claude/skills/data-viz/: SKILL.md
.claude/skills/frontend-design/: SKILL.md
backend/: llm_factory.py
backend/agents/: agents.py  redistricting_agents.py
backend/crews/: analysis_crew.py  narrative_crew.py
backend/tools/: chart_tool.py  duckdb_tool.py
config/: model_profiles.yaml
css/: sidebar.css  styles.css
data/: congress_districts.csv  congress_remedy_1_2024update.geojson  enacted_house22.geojson  enacted_senate22.geojson  house15_census20.geojson  house_districts.csv  house_prop1_dem.geojson  house_prop2_rep.geojson  house_prop3_rep.geojson  house_remedy_1.geojson  narratives.db  places_2020data.geojson  senate14_census20.geojson  senate_districts.csv  senate_prop1_dem.geojson  senate_prop2_rep.geojson  senate_prop3_rep.geojson  senate_remedy_40pct_2024update.geojson
data/samples/: congress_sample.csv  house_sample.csv  senate_sample.csv
frontend/: analyst.html  ui_elections.html
js/: chat.js  config.js  map.js  sidebar.js
scripts/: extract_geojson_to_csv.py  fetch_acs_data.py  fetch_election_data.py  fetch_rdh_data.py  fix_backend.sh  generate_sample_data.py  ingest_to_parquet.py  run_telegram_polling.py  schema.py  test_data_tools.py  test_question.py
